tests/unit/kyverno-policies/tenant-namespace-naming/resource-good-name.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-alice
